Convert tests to xunit

--- a/src/FluentValidation.Tests/packages.config
+++ b/src/FluentValidation.Tests/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Moq" version="4.1.1309.1617" targetFramework="net40" />
   <package id="MSBuildTasks" version="1.4.0.61" targetFramework="net40" />
-  <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="0.99.9-build1021" targetFramework="net45" />
 </packages>
