Support model level rules with RuleFor(x => x)

--- a/src/FluentValidation.Tests/FluentValidation.Tests.csproj
+++ b/src/FluentValidation.Tests/FluentValidation.Tests.csproj
@@ -130,6 +130,7 @@
     <Compile Include="LessThanOrEqualToValidatorTester.cs" />
     <Compile Include="LessThanValidatorTester.cs" />
     <Compile Include="LocalisedMessagesTester.cs" />
+    <Compile Include="ModelLevelValidatorTests.cs" />
     <Compile Include="NameResolutionPluggabilityTester.cs" />
     <Compile Include="NotEmptyTester.cs" />
     <Compile Include="NotEqualValidatorTests.cs" />
