Added JetBrains Annotations to API

--- a/src/FluentValidation.Portable/FluentValidation.Portable.csproj
+++ b/src/FluentValidation.Portable/FluentValidation.Portable.csproj
@@ -63,6 +63,9 @@
     <Compile Include="..\FluentValidation\Internal\InstanceCache.cs">
       <Link>InstanceCache.cs</Link>
     </Compile>
+    <Compile Include="..\FluentValidation\Internal\JetBrainsCodeAnnotations.cs">
+      <Link>JetBrainsCodeAnnotations.cs</Link>
+    </Compile>
     <Compile Include="..\FluentValidation\Internal\MessageFormatter.cs">
       <Link>MessageFormatter.cs</Link>
     </Compile>
